src/main/java/com/example/demo/controllers/errors/ValidationCode.java
package com.example.demo.controllers.errors;

public interface ValidationCode {

    String getCode();

    String getDescription();
}
